--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "json-simplified",
-  "version": "1.1.4",
+  "version": "1.1.11",
   "description": "Basic json database.",
   "main": "index.js",
-  "scripts": {
-  },
-  "keywords": ["JSON", "JSON-DB", "JSON-DATABASE", "DATABASE", "DATA"],
+  "scripts": {},
+  "keywords": [
+    "JSON",
+    "JSON-DB",
+    "JSON-DATABASE",
+    "DATABASE",
+    "DATA"
+  ],
   "author": "finbar",
   "license": "ISC",
-  "dependencies": {}
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OneAndonlyFinbar/json-simplified"
+  }
 }
